--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "personal-site-v2",
   "version": "0.1.0",
-  "homepage": "https://abord77.github.io/personal-site-v2",
+  "homepage": "https://abord77.github.io",
   "private": true,
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
@@ -48,6 +48,9 @@
     ]
   },
   "devDependencies": {
+    "@types/jest": "^30.0.0",
+    "@types/react-dom": "^19.1.9",
+    "@types/react-google-recaptcha": "^2.1.9",
     "gh-pages": "^6.3.0"
   }
 }
