--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "personal-site-v2",
   "version": "0.1.0",
-  "homepage": "https://abord77.github.io",
+  "homepage": "https://abord77.github.io/",
   "private": true,
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
